Closed
Bug 1841029
Opened 2 years ago
Closed 2 years ago
selfserv doesn't strip `publicname:` from `-X` value
Categories
(NSS :: Libraries, defect, P5)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: asosedkin, Assigned: djackson)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/114.0
Steps to reproduce:
selfserv -d sql:./nssdb -n server -p 4433 -V tls1.3:tls1.3 -v -X publicname:example.com on NSS 3.90
Actual results:
selfserv: SSL_SetServerEchConfigs failed returned error -12112:
SSL received a malformed ESNI keys structure
selfserv: configureEch failed returned error -12112:
SSL received a malformed ESNI keys structure
GDB breadcrumb:
Thread 1 "selfserv" hit Breakpoint 1, tls13_IsLDH (
str=0x7fffffffc0c3 "publicname:example.com", len=22) at tls13echv.c:146
Expected results:
selfserv: About to call accept. + ECH key is printed
Comment 2•2 years ago
|
||
The severity field is not set for this bug.
:beurdouche, could you have a look please?
For more information, please visit BugBot documentation.
Flags: needinfo?(bbeurdouche)
Updated•2 years ago
|
Flags: needinfo?(bbeurdouche) → needinfo?(djackson)
Updated•2 years ago
|
Severity: -- → N/A
Priority: -- → P5
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 3•2 years ago
|
||
Also noticed and suggested by Stephen Farrell.
https://hg.mozilla.org/projects/nss/rev/58fe6fd4beb422f0b261808fc764bb0cdc16405d
Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•