Bug 1841029 - Fix selfserv not stripping `publicname:` from -X value r=djackson

Differential Revision: https://phabricator.services.mozilla.com/D182454

--HG--
extra : moz-landing-system : lando